[gd_scene load_steps=17 format=2]

[ext_resource path="res://other_data/neuropol x rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/coin_toss.gd" type="Script" id=2]
[ext_resource path="res://sprites/toss_screen.png" type="Texture" id=3]
[ext_resource path="res://texture/font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://other_data/neuropol x rg.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = SubResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.239216, 0.470588, 0.0705882, 1 )
grow_begin = 0.0
thickness = 7
vertical = true

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0313726, 0.0705882, 0.137255, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.309804, 0.0352941, 0.0352941, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFontData" id=8]
font_path = "res://other_data/neuropol x rg.ttf"

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://other_data/neuropol x rg.ttf"

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.827451 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="coin_toss" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toss_text" type="Label" parent="."]
margin_left = 180.0
margin_top = 200.0
margin_right = 443.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "TOSS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinbox" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 500.0
margin_right = 529.0
margin_bottom = 555.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heads" type="Button" parent="coinbox"]
margin_right = 210.0
margin_bottom = 63.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "HEADS"

[node name="tails" type="Button" parent="coinbox"]
margin_left = 260.0
margin_right = 433.0
margin_bottom = 63.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "TAILS"

[node name="opp_choice" type="AcceptDialog" parent="."]
visible = true
margin_left = 60.0
margin_top = 348.0
margin_right = 569.0
margin_bottom = 679.0
popup_exclusive = true
window_title = ""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="opp_choice"]
margin_right = 501.0
margin_bottom = 206.0

[node name="player_choice" type="WindowDialog" parent="."]
margin_left = 37.7279
margin_top = 400.0
margin_right = 564.728
margin_bottom = 789.0
custom_styles/panel = SubResource( 5 )
window_title = "You won the toss"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="player_choice"]
margin_right = 500.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 6 )
text = "Do you wish to bat or bowl?"
autowrap = true

[node name="Batting" type="Button" parent="player_choice"]
margin_left = 122.978
margin_top = 113.632
margin_right = 388.978
margin_bottom = 182.632
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
text = "Batting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bowling" type="Button" parent="player_choice"]
margin_left = 117.441
margin_top = 247.544
margin_right = 400.441
margin_bottom = 328.544
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 11 )
text = "Bowling"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = 200.0
margin_top = 700.0
margin_right = 434.0
margin_bottom = 823.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupPanel"]
margin_right = 234.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 4 )
text = "Tossing..."
align = 1
valign = 1
[connection signal="pressed" from="coinbox/heads" to="." method="_on_heads_pressed"]
[connection signal="pressed" from="coinbox/tails" to="." method="_on_tails_pressed"]
[connection signal="confirmed" from="opp_choice" to="." method="_on_opp_choice_confirmed"]
[connection signal="pressed" from="player_choice/Batting" to="." method="_on_Batting_pressed"]
[connection signal="pressed" from="player_choice/Bowling" to="." method="_on_Bowling_pressed"]
